Added 'Photography' portfolio, Updated loads of old things

--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,8 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Blinker:wght@700&display=swap" rel="stylesheet">
 
@@ -83,7 +85,7 @@
 			<a class="footer-nav__link" href="/contact/">Contact Me</a>
 			<a class="footer-nav__link" href="/uses/">Uses</a>
 		</nav>
-		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
+		<p class="copyright">&copy; 2023 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
 	</div>
 </footer>
