--- a/src/about.html
+++ b/src/about.html
@@ -9,11 +9,11 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	<div class="indented-image">
 		<img src="/assets/images/roland.jpg" alt="Photo of Roland Szabó" title="Hey, it's the real me! 🤓">
 	</div>
-	<p>Hey, I'm Roland. I'm 31 years old, currently living in Budapest, Hungary.</p>
+	<p>Hey, I'm Roland. I'm 33 years old, currently living in Budapest, Hungary.</p>
 	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it for different websites.</p>
-	<p>Today, I'm a senior designer of <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a>, responsible for creating and maintaining the website that serves over a hundred-thousand people worldwide.</p>
+	<p>Today, I'm a lead designer of <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a> and <a href="https://twitteraudit.com" target="_blank" rel="noreferrer">TwitterAudit.com</a>.</p>
 	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about <strong>web performance</strong>, <strong>accessibility</strong>, and the <strong>JAMstack</strong>.</p>
-	<p>In my free time, I play computer- and board games, <a href="https://rolandszabo.photo" target="_blank" rel="noopener noreferrer">take loads of photos</a> with my camera, translate useful stuff to my native language, and read books on how to be a better person.</p>
+	<p>In my free time, I play computer- and board games, I do <a href="https://rolandszabo.photo/en/" target="_blank" rel="noopener noreferrer">relaxed portrait photography in Budapest</a>, translate useful stuff to my native language, and read books on how to be a better person.</p>
 </section>
 
 <section>
@@ -46,21 +46,29 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 <section>
 	<h2>Career History</h2>
 	<ol class="timeline">
-		<li class="job job--1">
+		<li class="job">
 			<strong class="job__role">Junior Web Developer</strong>
 			<div class="job__workplace">The Pulilab, <span class="job__period">2012</span></div>
 		</li>
-		<li class="job job--2">
+		<li class="job">
 			<strong class="job__role">Web Designer</strong>
 			<div class="job__workplace">Higher Click, <span class="job__period">2013&mdash;2014</span></div>
 		</li>
-		<li class="job job--3">
+		<li class="job">
 			<strong class="job__role">Lead Designer</strong>
 			<div class="job__workplace">Buffered VPN, <span class="job__period">2015&mdash;2018</span></div>
 		</li>
-		<li class="job job--4">
+		<li class="job">
 			<strong class="job__role">Senior Designer</strong>
-			<div class="job__workplace"><a href="https://proprivacy.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">ProPrivacy</a>, <span class="job__period">2018&mdash;today</span></div>
+			<div class="job__workplace"><a href="https://proprivacy.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">ProPrivacy</a>, <span class="job__period">2018&mdash;2021</span></div>
+		</li>
+		<li class="job">
+			<strong class="job__role">Lead Designer</strong>
+			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Retalk</a>, <span class="job__period">2021&mdash;present day</span></div>
+		</li>
+		<li class="job">
+			<strong class="job__role">Lead Designer</strong>
+			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">TwitterAudit</a>, <span class="job__period">2021&mdash;present day</span></div>
 		</li>
 	</ol>
 </section>
@@ -73,6 +81,6 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	</details>
 	<details class="faq">
 		<summary class="faq__question">Will you work for me full-time?</summary>
-		<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
+		<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a> and <a href="https://twitteraudit.com" target="_blank" rel="noreferrer">TwitterAudit.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
 	</details>
 </section>
