--- a/src/projects.html
+++ b/src/projects.html
@@ -5,7 +5,7 @@ intro: Here are some of my favorite projects I've worked on in the past few year
 ---
 
 <section class="projects">
-	{% for project in collections.projects %}
+	{% for project in collections.projects reversed %}
 		<article class="project">
 			<div class="project__screenshot" style="background-image: url({{ project.data.screenshot_url }})"></div>
 			<div class="project__logo-border">
