--- a/src/uses.html
+++ b/src/uses.html
@@ -12,11 +12,11 @@ intro: Here's a list of software and hardware that I use every day.
 		<ul>
 			<li>Gigabyte GA-Z270 Gaming K3 Motherboard</li>
 			<li>Intel Core i7-7700K CPU</li>
-			<li>Strix Nvidia GTX 1060 6GB OC VGA</li>
-			<li>Kingston HyperX Black Series 16GB DDR4-2400 RAM</li>
+			<li>Strix Nvidia RTX 3080 10GB OC VGA</li>
+			<li>Kingston HyperX Black Series 32GB DDR4-2400 RAM</li>
 			<li>LG 25UM58 21:9 Ultrawide 25" Screen</li>
-			<li>Asus Cerberus Keyboard</li>
-			<li>Tesoro Sagitta Spectrum Gaming Mouse</li>
+			<li>Logitech G213</li>
+			<li>Logitech G102 Lightsync</li>
 			<li>Acer Aspire V5-591G Laptop</li>
 		</ul>
 
@@ -25,30 +25,27 @@ intro: Here's a list of software and hardware that I use every day.
 			<li>Logitech Z623 2.1 THX Sound System</li>
 			<li>LEWITZ C100USB-W Microphone</li>
 			<li>Skullcandy Hesh 3 Bluetooth Headphones</li>
-			<li>Vintage V6 Reissued Stratocaster in Firenza Red</li>
-			<li>Zoom G1Xon Multi-Effect Processor</li>
 		</ul>
 
 		<h3>Misc.</h3>
 		<ul>
 			<li>Huawei P20 Pro Midnight Blue</li>
 			<li>Google Nexus 7</li>
-			<li>Fitbit Versa 2</li>
-			<li>XBOX One Wireless Controller</li>
+			<li>XBOX One Wireless Controllers</li>
 		</ul>
 	</section>
 
 	<section>
 		<h2>Software</h2>
 		<ul>
-			<li>Windows 10 Pro</li>
+			<li>Windows 11 Pro</li>
 			<li>Google Chrome</li>
-			<li>Firefox Developer Edition</li>
-			<li>Internet Explorer 11 🙈</li>
 			<li>Sublime Text 3</li>
 			<li>Adobe Photoshop CC</li>
+			<li>Adobe Lightroom CC</li>
 			<li>Adobe Illustrator CC</li>
 			<li>Adobe XD CC</li>
+			<li>Figma</li>
 			<li>Balsamiq Mockups</li>
 			<li>WinSCP</li>
 			<li>Git Bash</li>
