--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -8,6 +8,8 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Blinker:wght@700&display=swap" rel="stylesheet">
 
@@ -73,23 +75,23 @@
 <section class="projects">
 	
 		<article class="project">
-			<div class="project__screenshot" style="background-image: url(/assets/images/projects/ananas-01.png)"></div>
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/roland-szabo-photography-01.jpg)"></div>
 			<div class="project__logo-border">
-				<img class="project__logo" src="/assets/images/projects/ananas-logo.jpg" alt="Ananas CMS">
+				<img class="project__logo" src="/assets/images/projects/roland-szabo-photography-logo.png" alt="Roland Szabó Photography">
 			</div>
-			<h2 class="project__title">Ananas CMS</h2>
-			<p class="project__description">Ananas is a work-in-progress online ordering platform and content management system for restaurants and pizzerias.</p>
-			<a class="project__button button" href="/projects/ananas/">View Details</a>
+			<h2 class="project__title">Roland Szabó Photography</h2>
+			<p class="project__description">This is the portfolio website of my portrait photography journey.</p>
+			<a class="project__button button" href="/projects/roland-szabo-photography/">View Details</a>
 		</article>
 	
 		<article class="project">
-			<div class="project__screenshot" style="background-image: url(/assets/images/projects/buffered-02.png)"></div>
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/proprivacy-01.png)"></div>
 			<div class="project__logo-border">
-				<img class="project__logo" src="/assets/images/projects/buffered-logo.png" alt="Buffered VPN App">
+				<img class="project__logo" src="/assets/images/projects/proprivacy-logo.png" alt="ProPrivacy">
 			</div>
-			<h2 class="project__title">Buffered VPN App</h2>
-			<p class="project__description">The cross-platform app design of the Buffered VPN Application.</p>
-			<a class="project__button button" href="/projects/buffered-app/">View Details</a>
+			<h2 class="project__title">ProPrivacy</h2>
+			<p class="project__description">ProPrivacy is one of the leading educational websites worldwide about online privacy and security.</p>
+			<a class="project__button button" href="/projects/proprivacy/">View Details</a>
 		</article>
 	
 		<article class="project">
@@ -103,13 +105,23 @@
 		</article>
 	
 		<article class="project">
-			<div class="project__screenshot" style="background-image: url(/assets/images/projects/proprivacy-01.png)"></div>
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/buffered-02.png)"></div>
 			<div class="project__logo-border">
-				<img class="project__logo" src="/assets/images/projects/proprivacy-logo.png" alt="ProPrivacy">
+				<img class="project__logo" src="/assets/images/projects/buffered-logo.png" alt="Buffered VPN App">
 			</div>
-			<h2 class="project__title">ProPrivacy</h2>
-			<p class="project__description">ProPrivacy is one of the leading educational websites worldwide about online privacy and security.</p>
-			<a class="project__button button" href="/projects/proprivacy/">View Details</a>
+			<h2 class="project__title">Buffered VPN App</h2>
+			<p class="project__description">The cross-platform app design of the Buffered VPN Application.</p>
+			<a class="project__button button" href="/projects/buffered-app/">View Details</a>
+		</article>
+	
+		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/ananas-01.png)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/ananas-logo.jpg" alt="Ananas CMS">
+			</div>
+			<h2 class="project__title">Ananas CMS</h2>
+			<p class="project__description">Ananas is a work-in-progress online ordering platform and content management system for restaurants and pizzerias.</p>
+			<a class="project__button button" href="/projects/ananas/">View Details</a>
 		</article>
 	
 </section>
@@ -125,7 +137,7 @@
 			<a class="footer-nav__link" href="/contact/">Contact Me</a>
 			<a class="footer-nav__link" href="/uses/">Uses</a>
 		</nav>
-		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
+		<p class="copyright">&copy; 2023 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
 	</div>
 </footer>
