--- a/public/projects/roland-szabo-photography/index.html
+++ b/public/projects/roland-szabo-photography/index.html
@@ -79,7 +79,7 @@
 	<img src="/assets/images/projects/roland-szabo-photography-logo.png" alt="Roland Szabó Photography Logo">
 </div>
 <p>I first got a camera for my 30th birthday to pursue as a hobby. That hobby soon became something a lot more&hellip;</p>
-<p>I initially started shooting cars (always wanted to do that!) and street life, then after a few months, I started doing portraits and work with people to bring out the best of them. It soon became an addiction to meet new people, learn their stories and capture great images in the process.</p>
+<p>I initially started shooting cars (always wanted to do that!) and street life, then after a few months, I started doing portraits and working with people to bring out the best of them. It soon became an addiction to meet new people, learn their stories and capture great images in the process.</p>
 <p>For me, the camera is not an object I only pick up and use from time to time. It's an extension of my creative self, it's my way of communicating with people. It's something I bring with me virtually everywhere I go. Photography has enabled me to connect with people that hasn't been possible before, and I'm forever grateful for it.</p>
 <p>To be very fair, photography is now mynumber one hobby, and I'm now giving it all I got.</p>
 
