Portfolio Refreshed for 2024

--- a/public/projects/buffered-app/index.html
+++ b/public/projects/buffered-app/index.html
@@ -37,7 +37,7 @@
 	<body>
 		<header class="main-header">
 	<nav class="site-nav">
-		<img class="logo" src="/assets/images/roland.png" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
+		<img class="logo" src="/assets/images/roland-vector.webp" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
 		<ul class="site-nav__list">
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
@@ -97,6 +97,11 @@
 	<img class="figure__image" src="/assets/images/projects/buffered-03.png" alt="Screenshot of Buffered VPN App's Settings Screen">
 	<figcaption class="figure__caption figure__caption--odd">The <strong>Settings</strong> screen would allow users to customize the VPN.</figcaption>
 </figure>
+
+<section class="callout">
+	<h2 class="callout__title">Wanna see more?</h2>
+	<a class="button" href="/projects">Back to Projects</a>
+</section>
 
 			</div>
 		</main>
