--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -37,7 +37,7 @@
 	<body>
 		<header class="main-header">
 	<nav class="site-nav">
-		<img class="logo" src="/assets/images/roland.png" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
+		<img class="logo" src="/assets/images/roland-vector.webp" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
 		<ul class="site-nav__list">
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
@@ -75,13 +75,43 @@
 <section class="projects">
 	
 		<article class="project">
-			<div class="project__screenshot" style="background-image: url(/assets/images/projects/roland-szabo-photography-01.jpg)"></div>
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/roland-szabo-photography-01.webp)"></div>
 			<div class="project__logo-border">
-				<img class="project__logo" src="/assets/images/projects/roland-szabo-photography-logo.png" alt="Roland Szabó Photography">
+				<img class="project__logo" src="/assets/images/projects/roland-szabo-photography-logo.webp" alt="Roland Szabó Photography">
 			</div>
 			<h2 class="project__title">Roland Szabó Photography</h2>
 			<p class="project__description">This is the portfolio website of my portrait photography journey.</p>
 			<a class="project__button button" href="/projects/roland-szabo-photography/">View Details</a>
+		</article>
+	
+		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/autoseo-01.webp)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/autoseo-logo.webp" alt="AutoSEO">
+			</div>
+			<h2 class="project__title">AutoSEO</h2>
+			<p class="project__description">AutoSEO is a WordPress plugin that does technical SEO, automatically, using AI.</p>
+			<a class="project__button button" href="/projects/autoseo/">View Details</a>
+		</article>
+	
+		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/retalk-01.webp)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/retalk-logo.webp" alt="Retalk">
+			</div>
+			<h2 class="project__title">Retalk</h2>
+			<p class="project__description">Retalk is a social media platform targeted at non-woke center-right people in the US.</p>
+			<a class="project__button button" href="/projects/retalk/">View Details</a>
+		</article>
+	
+		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/twitteraudit-01.webp)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/twitteraudit-logo.webp" alt="TwitterAudit">
+			</div>
+			<h2 class="project__title">TwitterAudit</h2>
+			<p class="project__description">TwitterAudit is a B2C auditing and statistics tool for Twitter (now X).</p>
+			<a class="project__button button" href="/projects/twitteraudit/">View Details</a>
 		</article>
 	
 		<article class="project">
