--- a/public/projects/proprivacy/index.html
+++ b/public/projects/proprivacy/index.html
@@ -37,7 +37,7 @@
 	<body>
 		<header class="main-header">
 	<nav class="site-nav">
-		<img class="logo" src="/assets/images/roland.png" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
+		<img class="logo" src="/assets/images/roland-vector.webp" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
 		<ul class="site-nav__list">
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
@@ -78,7 +78,7 @@
 <div class="indented-image">
 	<img src="/assets/images/projects/proprivacy-logo.png" alt="ProPrivacy Logo">
 </div>
-<p>ProPrivacy's mission is to help users around the world reclaim their right to privacy through research, reviews, knowledge-sharing, investigations and direct action. As Senior Designer, I am responsible for the company's brand identity and the UI/UX of its frontend and backend websites.</p>
+<p><a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy</a>'s mission is to help users around the world reclaim their right to privacy through research, reviews, knowledge-sharing, investigations and direct action. As Senior Designer, I am responsible for the company's brand identity and the UI/UX of its frontend and backend websites.</p>
 <p>I joined the company right before a major redesign of both its frontend and backend sites, so it was the perfect opportunity to show what I'm capable of. Together with the extremely talented development team, we were able to rebuild the entirety of the frontend website in just two and a half months.</p>
 <p>In order to stay ahead in this highly competitive market, the frontend website needs to work flawlessly for every user every time. This required creating a very strong code foundation that works even in older browsers. We are keeping a very close eye on website performance, cross-browser compatibility and SEO-friendliness.</p>
 <p>The user-facing website is managed through a highly complex admin panel that is able to handle all the websites of our parent company, including ProPrivacy. To achieve this I built a solid yet very flexible design system with which we can prototype new admin pages in just minutes. Even though there's a high complexity in the underlying business logic, the admin site remains very easy to use and navigate.</p>
@@ -102,8 +102,8 @@
 </figure>
 
 <section class="callout">
-	<h2 class="callout__title">Care About Privacy?</h2>
-	<a class="button" href="https://proprivacy.com" target="_blank" rel="noreferrer">Visit ProPrivacy</a>
+	<h2 class="callout__title">Wanna see more?</h2>
+	<a class="button" href="/projects">Back to Projects</a>
 </section>
 
 			</div>
