--- a/src/about.html
+++ b/src/about.html
@@ -5,42 +5,15 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 ---
 
 <section>
-	<h2>A Friendly <del title="Sod off, COVID&hellip;">Handshake</del> <ins>Elbowbump</ins>!</h2>
+	<h2>A Friendly Handshake!</h2>
 	<div class="indented-image">
-		<img src="/assets/images/roland.jpg" alt="Photo of Roland Szabó" title="Hey, it's the real me! 🤓">
+		<img src="/assets/images/roland-photo.webp" alt="Photo of Roland Szabó" title="Hey, it's the real me! 🤓">
 	</div>
-	<p>Hey, I'm Roland. I'm 33 years old, currently living in Budapest, Hungary.</p>
-	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it for different websites.</p>
-	<p>Today, I'm a lead designer of <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a> and <a href="https://twitteraudit.com" target="_blank" rel="noreferrer">TwitterAudit.com</a>.</p>
-	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about <strong>web performance</strong>, <strong>accessibility</strong>, and the <strong>JAMstack</strong>.</p>
-	<p>In my free time, I play computer- and board games, I do <a href="https://rolandszabo.photo/en/" target="_blank" rel="noopener noreferrer">relaxed portrait photography in Budapest</a>, translate useful stuff to my native language, and read books on how to be a better person.</p>
-</section>
-
-<section>
-	<h2>What does a Frontend Designer do, anyway?</h2>
-	<p>Glad you asked! To my mom, I make websites. To everyone else, I'm a web professional with a very specific skillset in the labyrinthian realm of modern frontend development. Here's the nitty-gritty:</p>
-
-	<h3>Fields of Expertise</h3>
-	<ul>
-		<li><strong>I am highly skilled at <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading StyleSheets">CSS</abbr>.</strong> I hand-write semantic, reusable and overall beautiful code. My main focus is performance and accessibility.</li>
-		<li><strong>I design websites and user interfaces.</strong> I am highly proficient in the principles of web design, typography and color theory. My designs are more functional than artistic.</li>
-	</ul>
-
-	<h3>Other than that&hellip;</h3>
-	<ul>
-		<li>I have a solid grasp on <strong>user experience</strong> principles and best practices, but I don't conduct user surveys or do research.</li>
-		<li>I am familiar with key aspects of <strong>graphic design</strong> and how to incorporate it into web design, but I don't create hand-made illustrations or custom graphics.</li>
-		<li>I write basic presentational <strong>JavaScript and jQuery</strong> to control the interactive behaviour of user interface elements, but I don't write application-level code or work with JS-based frameworks.</li>
-		<li>I understand the importance of backend development and I can confidently work with <strong>templating systems</strong>, but I don't write backend logic (PHP, Python, C++, etc.) or fiddle with server-related stuff.</li>
-		<li>I know the onsite principles and best practices of <strong>search engine optimization</strong>, but I don't do offsite <abbr title="search engine optimization">SEO</abbr>, such as link building or guest posting.</li>
-		<li>I can create <strong>Wordpress</strong> themes from scratch and customize existing ones. I can comfortably work with The Loop, custom post types and custom page templates. However, I don't fiddle with more advanced Wordpress functions, and I don't do Wordpress plugin development.</li>
-	</ul>
-
-	<aside class="read-more">
-		<h2 class="read-more__title">Uses</h2>
-		<p class="read-more__description">If you're interested in the software and hardware I use, I created a page to tell you just that!</p>
-		<a class="button read-more__button" href="/uses/">Read</a>
-	</aside>
+	<p>Hey, I'm Roland. I'm <span title="👴">34 years old</span>, currently living in Budapest, Hungary.</p>
+	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it to death for different websites.</p>
+	<p>Today, I've worked with some amazing companies in senior and lead positions, crafting websites and user interfaces from scratch, tailoring them for the needs of the modern world.</p>
+	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about writing clean code, <strong>web performance</strong> and <strong>accessibility</strong>.</p>
+	<p>In my free time, I do <a href="https://rolandszabo.photo/en/" target="_blank" rel="noopener noreferrer">relaxed portrait photography in Budapest</a>, play computer- and board games, translate useful stuff to my native language, and read books on how not to be a jerk.</p>
 </section>
 
 <section>
@@ -64,13 +37,45 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 		</li>
 		<li class="job">
 			<strong class="job__role">Lead Designer</strong>
-			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Retalk</a>, <span class="job__period">2021&mdash;present day</span></div>
+			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Retalk</a>, <span class="job__period">2021&mdash;2022</span></div>
 		</li>
 		<li class="job">
 			<strong class="job__role">Lead Designer</strong>
-			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">TwitterAudit</a>, <span class="job__period">2021&mdash;present day</span></div>
+			<div class="job__workplace"><a href="https://twitteraudit.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">TwitterAudit</a>, <span class="job__period">2022&mdash;2023</span></div>
+		</li>
+		<li class="job">
+			<strong class="job__role">Lead Web & App Designer</strong>
+			<div class="job__workplace"><a href="https://getautoseo.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">AutoSEO</a>, <span class="job__period">2023&mdash;2024</span></div>
 		</li>
 	</ol>
+</section>
+
+<section>
+	<h2>What does a Frontend Designer do, anyway?</h2>
+	<p>Glad you asked! When my parents ask, I make websites. To everyone else, I'm a web professional with a very specific skillset in the labyrinthian realm of modern frontend development. Here's the nitty-gritty:</p>
+
+	<h3>Fields of Expertise</h3>
+	<ul>
+		<li><strong>I am highly skilled at <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading StyleSheets">CSS</abbr>.</strong> I hand-write minimal, semantic, reusable and overall beautiful code. My main focus is performance and accessibility.</li>
+		<li><strong>I design websites and user interfaces.</strong> I am highly proficient in the principles of web design, typography and color theory. My designs are more functional than artistic.</li>
+		<li><strong>I love fiddling with typography.</strong> I am an advocate of the fact that the web is 95% typography. I think web design is about the same.</li>
+	</ul>
+
+	<h3>Other than that&hellip;</h3>
+	<ul>
+		<li>I have a solid grasp on <strong>user experience</strong> principles and best practices, but I don't conduct user surveys or do research.</li>
+		<li>I am familiar with key aspects of <strong>graphic design</strong> and how to incorporate it into web design, but I don't create hand-made illustrations or custom graphics.</li>
+		<li>I write basic presentational <strong>JavaScript and jQuery</strong> to control the interactive behaviour of user interface elements, but I don't write application-level code.</li>
+		<li>I understand the principles of backend development and I can confidently work with <strong>templating systems</strong>, but I don't write backend logic (PHP, Python, C++, etc.) or fiddle with server-related stuff.</li>
+		<li>I know the on-site principles and best practices of <strong>search engine optimization</strong>, but I don't do offsite <abbr title="search engine optimization">SEO</abbr>, such as link building or guest posting.</li>
+		<li>I can create <strong>Wordpress</strong> themes from scratch and customize existing ones. I can comfortably work with The Loop, custom post types and custom page templates. However, I don't fiddle with more advanced functions, and I don't do plugin development.</li>
+	</ul>
+
+	<aside class="read-more">
+		<h2 class="read-more__title">Uses</h2>
+		<p class="read-more__description">If you're interested in the software and hardware I use, I created a page to tell you just that!</p>
+		<a class="button read-more__button" href="/uses/">Read</a>
+	</aside>
 </section>
 
 <section>
@@ -78,9 +83,5 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	<details class="faq">
 		<summary class="faq__question">Do you use any coding frameworks?</summary>
 		<p><strong>No, I don't.</strong> I pride myself in hand-crafting every line of my code and not relying on third party, often bloated frameworks. I have my own simple, tried-and-tested grid system (~4 kB) that I use for my early layouts, but other than that, I hand-craft every component and page layout for each project.</p>
-	</details>
-	<details class="faq">
-		<summary class="faq__question">Will you work for me full-time?</summary>
-		<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a> and <a href="https://twitteraudit.com" target="_blank" rel="noreferrer">TwitterAudit.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
 	</details>
 </section>
