--- a/src/projects/ananas.html
+++ b/src/projects/ananas.html
@@ -27,3 +27,8 @@ screenshot_url: /assets/images/projects/ananas-01.png
 	<img class="figure__image" src="/assets/images/projects/ananas-02.png" alt="Screenshot of {{ title }}'s Backend">
 	<figcaption class="figure__caption figure__caption--even">Screenshot of the <strong>admin site</strong> of Ananas. This is the place where you customize your site and manage products.</figcaption>
 </figure>
+
+<section class="callout">
+	<h2 class="callout__title">Wanna see more?</h2>
+	<a class="button" href="/projects">Back to Projects</a>
+</section>
