--- a/src/projects/buffered-app.html
+++ b/src/projects/buffered-app.html
@@ -31,3 +31,8 @@ screenshot_url: /assets/images/projects/buffered-02.png
 	<img class="figure__image" src="/assets/images/projects/buffered-03.png" alt="Screenshot of {{ title }}'s Settings Screen">
 	<figcaption class="figure__caption figure__caption--odd">The <strong>Settings</strong> screen would allow users to customize the VPN.</figcaption>
 </figure>
+
+<section class="callout">
+	<h2 class="callout__title">Wanna see more?</h2>
+	<a class="button" href="/projects">Back to Projects</a>
+</section>
