--- a/src/projects/roland-szabo-photography.html
+++ b/src/projects/roland-szabo-photography.html
@@ -2,10 +2,10 @@
 layout: base.html
 tags: projects
 title: Roland Szabó Photography
-tagline: Project
+tagline: Passion Project
 intro: This is the portfolio website of my portrait photography journey.
-logo_url: /assets/images/projects/roland-szabo-photography-logo.png
-screenshot_url: /assets/images/projects/roland-szabo-photography-01.jpg
+logo_url: /assets/images/projects/roland-szabo-photography-logo.webp
+screenshot_url: /assets/images/projects/roland-szabo-photography-01.webp
 ---
 
 <h2>Project Description</h2>
@@ -15,23 +15,23 @@ screenshot_url: /assets/images/projects/roland-szabo-photography-01.jpg
 <p>I first got a camera for my 30th birthday to pursue as a hobby. That hobby soon became something a lot more&hellip;</p>
 <p>I initially started shooting cars (always wanted to do that!) and street life, then after a few months, I started doing portraits and working with people to bring out the best of them. It soon became an addiction to meet new people, learn their stories and capture great images in the process.</p>
 <p>For me, the camera is not an object I only pick up and use from time to time. It's an extension of my creative self, it's my way of communicating with people. It's something I bring with me virtually everywhere I go. Photography has enabled me to connect with people that hasn't been possible before, and I'm forever grateful for it.</p>
-<p>To be very fair, photography is now mynumber one hobby, and I'm now giving it all I got.</p>
+<p>To be very fair, photography is now my number one hobby, and I'm now giving it all I got.</p>
 
 <h2>Screenshots</h2>
 <figure class="figure figure--odd">
-	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-01.jpg" alt="Screenshot of {{ title }}'s Homepage">
+	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-01.webp" alt="Screenshot of {{ title }}'s Homepage">
 	<figcaption class="figure__caption figure__caption--odd">Homepage</figcaption>
 </figure>
 <figure class="figure figure--even">
-	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-02.jpg" alt="Screenshot of {{ title }}'s Gallery Page">
+	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-02.webp" alt="Screenshot of {{ title }}'s Gallery Page">
 	<figcaption class="figure__caption figure__caption--even">Recent Work</figcaption>
 </figure>
 <figure class="figure figure--odd">
-	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-03.jpg" alt="Screenshot of {{ title }}'s About Page">
+	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-03.webp" alt="Screenshot of {{ title }}'s About Page">
 	<figcaption class="figure__caption figure__caption--odd">About Page</figcaption>
 </figure>
 <figure class="figure figure--even">
-	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-04.jpg" alt="Screenshot of {{ title }}'s Landing Page">
+	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-04.webp" alt="Screenshot of {{ title }}'s Landing Page">
 	<figcaption class="figure__caption figure__caption--even">Portrait Photography Landing Page</figcaption>
 </figure>
 
