--- a/public/bookmarks/index.html
+++ b/public/bookmarks/index.html
@@ -37,7 +37,7 @@
 	<body>
 		<header class="main-header">
 	<nav class="site-nav">
-		<img class="logo" src="/assets/images/roland.png" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
+		<img class="logo" src="/assets/images/roland-vector.webp" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
 		<ul class="site-nav__list">
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
