Just titles updated, CV added

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -96,23 +96,23 @@
 			<div class="job__workplace">Higher Click, <span class="job__period">2013&mdash;2014</span></div>
 		</li>
 		<li class="job">
-			<strong class="job__role">Lead Designer</strong>
+			<strong class="job__role">Lead Web Designer</strong>
 			<div class="job__workplace">Buffered VPN, <span class="job__period">2015&mdash;2018</span></div>
 		</li>
 		<li class="job">
-			<strong class="job__role">Senior Designer</strong>
+			<strong class="job__role">Senior Web Designer</strong>
 			<div class="job__workplace"><a href="https://proprivacy.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">ProPrivacy</a>, <span class="job__period">2018&mdash;2021</span></div>
 		</li>
 		<li class="job">
-			<strong class="job__role">Lead Designer</strong>
+			<strong class="job__role">Lead Web Designer</strong>
 			<div class="job__workplace"><a href="https://retalk.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Retalk</a>, <span class="job__period">2021&mdash;2022</span></div>
 		</li>
 		<li class="job">
-			<strong class="job__role">Lead Designer</strong>
+			<strong class="job__role">Lead Web Designer</strong>
 			<div class="job__workplace"><a href="https://twitteraudit.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">TwitterAudit</a>, <span class="job__period">2022&mdash;2023</span></div>
 		</li>
 		<li class="job">
-			<strong class="job__role">Lead Web & App Designer</strong>
+			<strong class="job__role">Lead Web Designer</strong>
 			<div class="job__workplace"><a href="https://getautoseo.com" target="_blank" rel="noreferrer" title="Opens in a new browser tab">AutoSEO</a>, <span class="job__period">2023&mdash;2024</span></div>
 		</li>
 	</ol>
