--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 layout: base.html
 title: Roland Szabó
 bg: ''
-tagline: Senior Frontend Designer
+tagline: Senior Web Designer
 ---
 
-<p class="homepage-intro">Hi! I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.</p>
+<p class="homepage-intro">I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work. <a href="/assets/roland-szabo-cv.pdf">Here's my CV.</a></p>
 
 <p>Welcome to my website, it's great to have you here! Here's what you'll find here.</p>
 <p>You can get to know me and learn what I do exactly on my <a href="/about/">About</a> page, or check out some of my favorite <a href="/projects/">Projects</a> that I've worked on.</p>
