--- a/public/projects/ananas/index.html
+++ b/public/projects/ananas/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Ananas CMS | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,7 +28,7 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/projects/ananas/">
-		<meta property="og:title" content="Ananas CMS | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="Ananas CMS | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="Ananas is a work-in-progress online ordering platform and content management system for restaurants and pizzerias.">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/projects/ananas-logo.jpg">
 
