--- a/public/projects/autoseo/index.html
+++ b/public/projects/autoseo/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>AutoSEO | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,7 +28,7 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/projects/autoseo/">
-		<meta property="og:title" content="AutoSEO | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="AutoSEO | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="AutoSEO is a WordPress plugin that does technical SEO, automatically, using AI.">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/projects/autoseo-logo.webp">
 
