--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Contact Me | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,9 +28,9 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/contact/">
-		<meta property="og:title" content="Contact Me | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="Contact Me | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="Wanna say hi? Here's a bunch of options on how you can start a conversation with me.">
-		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland.png">
+		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland-photo.webp">
 
 		<!--[if IE]> <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script> <![endif]-->
 	</head>
