--- a/public/projects/buffered-app/index.html
+++ b/public/projects/buffered-app/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Buffered VPN App | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,7 +28,7 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/projects/buffered-app/">
-		<meta property="og:title" content="Buffered VPN App | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="Buffered VPN App | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="The cross-platform app design of the Buffered VPN Application.">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/projects/buffered-logo.png">
 
