--- a/public/projects/lotrem-ipsum/index.html
+++ b/public/projects/lotrem-ipsum/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>LOTRem Ipsum | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,7 +28,7 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/projects/lotrem-ipsum/">
-		<meta property="og:title" content="LOTRem Ipsum | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="LOTRem Ipsum | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="LOTRem Ipsum is a tool for designers and developers that generates marked-up text. Just add CSS!">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/projects/lotrem-ipsum-logo.jpg">
 
