--- a/public/projects/proprivacy/index.html
+++ b/public/projects/proprivacy/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>ProPrivacy | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -27,7 +28,7 @@
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://rolandszabo.design/projects/proprivacy/">
-		<meta property="og:title" content="ProPrivacy | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="ProPrivacy | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="ProPrivacy is one of the leading educational websites worldwide about online privacy and security.">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/projects/proprivacy-logo.png">
 
